--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   </head>
 
   <body>
+    
     <script>
+    
       var data = [
         { timestamp: '20111001', temperature: 63.4 },
         { timestamp: '20111002', temperature: 58.0 },
@@ -247,9 +249,10 @@
         })
 
         .on('mousemove', function (event) {
-          event = d3.mouse(this);
-          mousex = event.pageX - 70;
-          mousey = event.pageY - 70;
+          let mouse = d3.mouse(this);
+          console.log(mouse)
+          mousex = d3.mouse(this)[0] - 70;
+          mousey = d3.mouse(this)[1] - 70;
 
           vertical.style('left', mousex + 'px').on('mouseover', function () {
             vertical.style('left', mousex + 'px');
