--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
         { timestamp: '20111004', temperature: 54.7 },
         { timestamp: '20111005', temperature: 63.2 },
         { timestamp: '20111006', temperature: 54.0 },
+        { timestamp: '20111007', temperature: 63.3 },
+        { timestamp: '20111008', temperature: 54.7 },
+        { timestamp: '20111009', temperature: 63.2 },
+        { timestamp: '20111010', temperature: 54.0 },
+        { timestamp: '20111011', temperature: 63.3 },
+        { timestamp: '20111012', temperature: 54.7 },
+        { timestamp: '20111013', temperature: 63.2 },
+        { timestamp: '20111014', temperature: 54.0 },
       ];
       //console.log(data)
 
